# Alerta-Escuela-Equity-Audit

./: .gitignore  CITATION.cff  M4.md  README.md  download.py  flake.nix  justfile  pyproject.toml
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v3.1-REQUIREMENTS.md  v3.1-ROADMAP.md  v4.0-MILESTONE-AUDIT.md  v4.0-REQUIREMENTS.md  v4.1-REQUIREMENTS.md  v4.1-ROADMAP.md
.planning/reference/: specs.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/exports/: README.md  choropleth.json  descriptive_tables.json  fairness_comparison.json  fairness_metrics.json  fairness_metrics_lr.json  fairness_metrics_mlp.json  fairness_metrics_rf.json  fairness_metrics_rf_v1.json  fairness_metrics_v1.json  fairness_metrics_xgb.json  feature_ablation.json  findings.json  model_results.json  panel_linkage_report.json  power_analysis.json  (+5 more)
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_fairness_analysis.ipynb  04_findings_visualization.ipynb
paper/: improvements.md  main.tex  references.bib  textidote_report.html
scripts/: gee_viirs_peru.js  generate_fig08.py  generate_tables.py  match_gadm_ubigeo.py  process_census_redatam.py  publication_figures.py  rerun_pipeline.sh  retrain_all.py
src/: plotting.py  utils.py
tests/: test_gate_latex_tables.py  test_gate_pub_figures.py
(+161 files in other folders)
